--- a/proyecto-estructurador/package.json
+++ b/proyecto-estructurador/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "angular-carousel": "^1.1.0",
-    "angular-highcharts": "^4.0.5",
+    "angular-highcharts": "^4.0.7",
     "angular2": "^2.0.0-beta.21",
     "angular2-highcharts": "^0.5.5",
     "chart.js": "^2.7.1",
@@ -30,18 +30,18 @@
     "highcharts": "^6.0.2",
     "ng2-carouselamos": "^3.2.0",
     "ng2-charts": "^1.6.0",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.5",
+    "@angular/cli": "^1.5.0",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
-    "@types/highcharts": "^5.0.8",
+    "@types/highcharts": "^5.0.10",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.2.0",
+    "codelyzer": "^3.2.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
