--- a/proyecto-estructurador/package.json
+++ b/proyecto-estructurador/package.json
@@ -28,23 +28,23 @@
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
-    "highcharts": "^6.0.2",
+    "highcharts": "^6.0.3",
     "ng2-bs3-modal": "^0.13.0",
     "ng2-carouselamos": "^3.2.0",
     "ng2-charts": "^1.6.0",
     "ng2-tooltip": "0.0.7",
-    "ngx-bootstrap": "^2.0.0-beta.8",
+    "ngx-bootstrap": "^2.0.0-beta.9",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
+    "@angular/cli": "^1.5.5",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
-    "@types/highcharts": "^5.0.10",
+    "@types/highcharts": "^5.0.12",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.92",
     "codelyzer": "^3.2.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
